# heatload

heatload/: .cvsignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README  README.in  RELEASES  acconfig.h  autogen.sh  configure  configure.in  heatload.cc  heatload.glade
heatload/debian/: changelog  conffiles  control  copyright  files  heatload.substvars  menu  postinst  rules
heatload/debian/heatload/DEBIAN/: control  md5sums
heatload/src/: .cvsignore  FileFinder.cc  FileFinder.hh  Gizmo.cc  Gizmo.hh  GraphDrawingArea.cc  GraphDrawingArea.hh  Makefile.am  MeterStruct.cc  MeterStruct.hh  RC.cc  RC.hh  Structs.hh  Tag.cc  Tag.h  Tag.hh  TagStream.cc  TagStream.h  TagStream.hh  WindowInfo.cc  WindowInfo.hh  WindowInfo_glade.cc  WindowInfo_glade.hh  get_values.cc  gtk_acpi.cc  gtk_acpi.hh  gtk_acpi_glade.cc  gtk_acpi_glade.hh  gtk_acpi_menu.cc  gtkacpi.cc  heatload.1  heatload.cc  heatload.conf  itos.cc  itos.h  set_throttling  set_throttling.1  show_values.cc  sudo_set_throttling  sudo_set_throttling.1  (+4 more)
heatload_old/: GraphDrawingArea.cc  GraphDrawingArea.hh  MainWindow.cc  MainWindow.hh  Makefile  MeterStruct.cc  MeterStruct.hh  README.in  heatload.cc
