# generated 2002/3/18 6:58:49 CET by thoma@Tiger.(none)
# using glademm V0.6.4b_cvs

AC_INIT(src/gtkacpi.cc)
AM_INIT_AUTOMAKE(gtkacpi, 0.7.3)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

AC_LANG_CPLUSPLUS

AM_PATH_GTKMM(1.2.8,,
        AC_MSG_ERROR(Cannot find GTK--: Please install Version 1.2.8+))

AC_OUTPUT(Makefile src/Makefile)
